# JHQ_GPU

./: .gitignore  CMakeLists.txt  HBLOCK_1B_DESIGN.md  HBLOCK_DESIGN.md  HBLOCK_V23_ANALYSIS_FOR_CLAUDE.md  HBLOCK_V37_PRR_SEED_DIAGNOSTIC_RESULTS.md  HBLOCK_VNEXT_BLOCK_GRAPH_PLAN.md  README.md  V17_REPORT_POINTS_EN.md  VERSIONS.md
common/: cuda_utils.cuh  fvecs_io.cuh
cpu/: codebook.cpp  codebook.h  erfinv.h  jl_transform.cpp  jl_transform.h
examples/: demo_hblock.cu  demo_hblock_v1.cu  demo_hblock_v10.cu  demo_hblock_v11.cu  demo_hblock_v12.cu  demo_hblock_v13.cu  demo_hblock_v14.cu  demo_hblock_v15.cu  demo_hblock_v16.cu  demo_hblock_v17.cu  demo_hblock_v18.cu  demo_hblock_v19.cu  demo_hblock_v2.cu  demo_hblock_v20.cu  demo_hblock_v21.cu  demo_hblock_v22.cu  demo_hblock_v23.cu  demo_hblock_v24.cu  demo_hblock_v25.cu  demo_hblock_v26.cu  demo_hblock_v27.cu  demo_hblock_v28.cu  demo_hblock_v29.cu  demo_hblock_v3.cu  demo_hblock_v30.cu  demo_hblock_v31_diag.cu  demo_hblock_v32.cu  demo_hblock_v33.cu  demo_hblock_v34.cu  demo_hblock_v35.cu  demo_hblock_v36.cu  demo_hblock_v37_prr.cu  demo_hblock_v37_prr_seed_diag.cu  demo_hblock_v4.cu  demo_hblock_v5.cu  demo_hblock_v6.cu  demo_hblock_v7.cu  demo_hblock_v8.cu  demo_hblock_v9.cu  demo_jhq_v10_bytelut.cu  (+25 more)
hblock/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
hblock_v1/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v10/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v11/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v12/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v13/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v14/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v15/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v16/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v17/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v18/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v19/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v2/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v20/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v21/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v22/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v23/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v24/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v25/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v26/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v27/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v28/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v29/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v3/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v30/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v32/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v33/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v34/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v35/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v36/: jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v37_prr/: diag.cu  diag.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v4/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v5/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v6/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v7/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v8/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
hblock_v9/: encode.cu  encode.cuh  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v10_bytelut/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v11_outerlut/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
jhq_v12_transposed/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v13_step_timing/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v1_plain/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
jhq_v2_topk/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
jhq_v3_ivf/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v4_batched_query/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
jhq_v5_cuda_graph/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
jhq_v6_async_h2d/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu
jhq_v7_spin_sync/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v8_timing/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
jhq_v9_step_timing/: encode.cu  jhq_gpu_index.cu  jhq_gpu_index.cuh  search.cu  search.cuh
results/: architecture_v_next.md  cpu_arxiv.csv  cpu_vogue.csv  hblock_v17_arxiv.csv  hblock_v17_vogue.csv  hblock_v18_arxiv.csv  hblock_v18_vogue.csv  hblock_v19_arxiv.csv  hblock_v19_vogue.csv  hblock_v1_vogue768.csv  hblock_v20_arxiv.csv  hblock_v20_vogue.csv  hblock_v21_arxiv.csv  hblock_v21_vogue.csv  hblock_v2v3v4_bench_20260706.txt  hblock_v37_prr_seed_diag_20260722_103525.csv  hblock_v37_prr_seed_diag_20260722_103525.txt  hblock_v37_prr_seed_diag_20260722_110423.csv  hblock_v37_prr_seed_diag_20260722_110423.txt  hblock_v37_prr_vogue.csv  jhq_gpu_all_vogue768.csv  (+11 more)
(+90 files in other folders)
